# code-challenge-torqata

./: .env  .gitignore  README.md  assignment.md  docker-compose.yaml
api/: .env  Dockerfile  README.md  pyproject.toml
api/alembic/: README.md  env.py
api/api/: main.py  utils.py
api/api/api/: deps.py
api/api/api/api_v1/: api.py
api/api/api/api_v1/endpoints/: eight_ball.py  login.py  ping.py  title_agg_queries.py  titles.py  users.py
api/api/controllers/: __init__.py  sql_query.py  sys_info.py
api/api/core/: config.py  security.py
api/api/crud/: __init__.py  base.py  crud_title.py  crud_user.py
api/api/db/: base.py  init_db.py
api/api/models/: __init__.py  titles.py  users.py
api/api/schemas/: __init__.py  eight_ball.py  sql_count_query.py  title.py  user.py
api/api/tests/: conftest.py
api/api/tests/api/api_v1/: test_login.py  test_users.py
api/api/tests/crud/: test_user.py
api/api/tests/utils/: user.py  utils.py
database/: Dockerfile  init.sql  load-extensions.sh  netflix_titles.csv
