[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Paul Wong <paul@jaiken.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
requests = "^2.24.0"
sqlalchemy = "^1.3.20"
uvicorn = "^0.12.2"
email-validator = "^1.1.1"
passlib = "^1.7.4"
pydantic = "^1.6.1"
emails = "^0.6"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
python-jose = "^3.2.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
psutil = "^5.7.3"
unicorn = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
